# vie

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  codecov.yml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz-testing.yml  sonarcloud.yml
.github/workflows/workflows/: ci.yml
config/: envoy.yaml
javascript_services/vie_ui/: nohup.out  package.json
javascript_services/vie_ui/src/: App.js  App.test.js  index.js
javascript_services/vie_ui/src/components/: TerrainMap.js  TerrainMapContainer.js
python_services/: __init__.py
python_services/common/: logging_config.py
python_services/persistence/: persistence_service.py  requirements.txt
python_services/persistence/tests/unit/: test_persistence_service.py
python_services/protos/persistence/: persistence.proto
python_services/protos/terrain_generation/: terrain_generation.proto
python_services/terrain_generation/: requirements.txt  terrain_generation_service.py
python_services/terrain_generation/tests/unit/: test_terrain_generation.py
python_services/test/client/: persistence_service_client.py  persistence_service_pb2.py  persistence_service_pb2_grpc.py  uiish_client.py
python_services/vie_ui/: vie_ui.py
script/: context  design_prompt_template.txt  generate_context.py  show_coverage.sh  show_docs.sh  start.sh  stop.sh
